# memmesh-python

./: .gitignore  README.md  pyproject.toml
src/memmesh/: __init__.py  _http.py  client.py  errors.py  types.py
src/memmesh/resources/: __init__.py  context.py  lattice.py  memory.py
tests/: test_client.py
