[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "thinkfleet-memmesh"
version = "0.3.0"
description = "MemMesh — memory + prediction for AI agents. Official Python SDK."
readme = "README.md"
requires-python = ">=3.9"
license = "Apache-2.0"
authors = [{ name = "ThinkFleet", email = "hello@memmesh.ai" }]
keywords = ["ai", "agents", "memory", "llm", "mcp", "prediction", "memmesh"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = ["httpx>=0.27,<1"]

[project.urls]
Homepage = "https://memmesh.ai"
Documentation = "https://memmesh.ai/docs"
Source = "https://github.com/ThinkfleetAI/memmesh-python"
Issues = "https://github.com/ThinkfleetAI/memmesh-python/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "mypy>=1.10",
    "ruff>=0.5",
]

[tool.hatch.build.targets.wheel]
packages = ["src/memmesh"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.pytest.ini_options]
asyncio_mode = "auto"
